# app1

./: .gitignore  README.md  gradlew  local.properties  settings.gradle  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flamapp/rnd/: MainActivity.kt
app/src/main/java/com/flamapp/rnd/gl/: CameraRenderer.kt  ShaderUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
jni/: CMakeLists.txt  native-lib.cpp
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
